kubernetes/photoprism/components/openshift/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: photoprism
  namespace: photoprism
  labels:
    app.kubernetes.io/instance: photoprism
  annotations:
    externaldns.k8s.io: pihole
    route.openshift.io/termination: edge
spec:
  ingressClassName: openshift-default
  tls:
    - hosts:
        - photoprism.arthurvardevanyan.com
      secretName: photoprism-cert
  rules:
    - host: photoprism.arthurvardevanyan.com
      http:
        paths:
          - path: ""
            pathType: ImplementationSpecific
            backend:
              service:
                name: photoprism
                port:
                  name: http
